# openvdb_voxl_mapper

./: .gitignore  CMakeLists.txt  Dockerfile  Dockerfile.focal  LICENSE  README.md  build_and_run.sh  package.xml
benchmark/: CMakeLists.txt  nuscenes_benchmark.cpp
benchmark/data/: .gitignore
docker/: Dockerfile.focal
include/openvdb_voxel_mapper/: aggregator.h  conversions.h  ros1_voxel_cloud.h  types.h  voxel_cloud.h
include/openvdb_voxel_mapper/conversions/: pcl.h  ros1.h
include/openvdb_voxel_mapper/impl/: aggregator.hpp  voxel_cloud.hpp
include/openvdb_voxel_mapper/openvdb/: PointMerge.h
include/openvdb_voxel_mapper/operations/: ground_plane.h  ground_plane_extraction.h  ground_plane_extraction.hpp  openvdb.h  semantics.h  utils.h
ros1/: CMakeLists.txt  aggregate_bag.cpp  package.xml  ros1_voxel_cloud.cpp
ros1/launch/: receding_ground_extraction.launch  receding_ground_extraction.rviz  receding_ground_extraction_playback.launch
ros1/nodes/: receding_ground_extraction_node.cpp
ros1/src/: ros1_voxel_cloud.cpp
ros1/tests/: CMakeLists.txt  TestOVMROS1.cpp
ros1/utilities/: aggregate_bag.cpp
src/: aggregator.cpp  openvdb_voxel_mapper.cpp  voxel_cloud.cpp
src/operations/: Image.hpp  ground_plane.cpp  ground_plane.cu  ground_plane_extraction.cpp  ground_plane_extraction.cu
tests/: CMakeLists.txt  TestOVMConversions.cpp  TestOVMCore.cpp  TestOVMOperations.cpp  TestVoxelCloud.cpp  development.cpp  main.cc  test_utilities.h
tests/openvdb/: CMakeLists.txt  TestPointMerge.cc  main.cc
