<?xml version="1.0"?>
<!-- ROS1 package.xml specification. -->
<package format="3">
  <name>openvdb_voxel_mapper</name>
  <version>1.0.0</version>
  <description>VOXEL Mapping with an OpenVDB Backend.</description>
  <maintainer email="dsahu@fake.mail.com">Daniel M. Sahu</maintainer>
  <license>MIT</license>

  <!-- build dependencies -->
  <buildtool_depend>catkin</buildtool_depend>
  <depend>grid_map_core</depend>
  <depend>grid_map_msgs</depend>
  <depend>grid_map_ros</depend>
  <depend>pcl_conversions</depend>
  <depend>pcl_ros</depend>
  <depend>rosbag</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2_ros</depend>

  <!-- runtime dependencies -->
  <exec_depend>rviz</exec_depend>
  <exec_depend>grid_map_rviz_plugin</exec_depend>

</package>
